# optim

./: .dokx  .gitignore  CMakeLists.txt  ConfusionMatrix.lua  Logger.lua  README  README.md  adadelta  adadelta.lua  adagrad.lua  adam.lua  adamax.lua  asgd.lua  cg.lua  checkgrad.lua  cmaes.lua  de.lua  eve.lua  fista.lua  ftml.lua  init.lua  l2.lua  lbfgs.lua  levmarq.lua  lswolfe.lua  mkdocs.yml  nag.lua  optim-1.0-0.rockspec  optim-1.0-1.rockspec  optim-1.0.1-0.rockspec  optim-1.0.2-0.rockspec  optim-1.0.3-0.rockspec  optim-1.0.3-1.rockspec  optim-1.0.4-0.rockspec  optim-1.0.5-0.rockspec  polyinterp.lua  rmsprop.lua  rprop.lua  sgd.lua  sparsecoding.lua
doc/: README.md  algos.md  index.md  intro.md  logger.md
rocks/: optim-1.0.3-0.rockspec  optim-1.0.3-1.rockspec  optim-1.0.4-1.rockspec
test/: rosenbrock.lua  sparsecoding.lua  test_adadelta.lua  test_adagrad.lua  test_adam.lua  test_adamax.lua  test_cg.lua  test_cmaes.lua  test_confusion.lua  test_de.lua  test_eve.lua  test_fista.lua  test_lbfgs.lua  test_lbfgs_w_ls.lua  test_logger.lua  test_rmsprop.lua  test_sgd.lua
